pushgateway/deploy/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: perf-pushgateway-service
  labels:
    app.kubernetes.io/component: perf-pushgateway
    app.kubernetes.io/instance: perf-monitoring
    app.kubernetes.io/name: perf-monitoring
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: 9091
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  selector:
    app.kubernetes.io/component: perf-pushgateway
    app.kubernetes.io/instance: perf-monitoring
    app.kubernetes.io/name: perf-monitoring
